# cosmog

./: .gitignore  AGENT.md  DOCS.md  README.md  docker-compose.yml  index.html  index.html.1  package-lock.json  package.json  release.jks  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: DOCS.md
scripts/: release.sh  reset-db.sh
src/: App.tsx  main.tsx  providers.json  providers.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsi
src-tauri/src/: bulk.rs  crypto.rs  device.rs  error.rs  lib.rs  main.rs  providers.rs  saf.rs  scheduler.rs  secrets.rs  state.rs  sync.rs  validate.rs
src-tauri/src/commands/: accounts.rs  browse.rs  buckets.rs  bulk.rs  capabilities.rs  encryption.rs  logs.rs  mod.rs  objects.rs  portable.rs  request_logs.rs  search.rs  settings.rs  transfers.rs
src-tauri/src/db/: accounts.rs  cache.rs  capabilities.rs  encryption.rs  mod.rs  request_logs.rs  settings.rs  transfers.rs
src-tauri/src/store/: android_tls.rs  logging.rs  mod.rs  region_retry.rs  s3.rs
src-tauri/src/transfer/: manager.rs  mod.rs
src-tauri/tests/: buckets.rs  bulk.rs  capabilities.rs  crypto.rs  objects.rs  settings_db.rs  sync_search.rs  transfers.rs
src-tauri/tests/common/: mod.rs
src/api/: accounts.ts  browse.ts  buckets.ts  encryption.ts  logs.ts  objects.ts  portable.ts  requestLogs.ts  search.ts  settings.ts  transfers.ts
src/routes/: Browse.tsx  Logs.tsx  MainApp.tsx  Onboarding.tsx  Settings.tsx  Titlebar.tsx  Transfers.tsx
src/routes/browse/: AccountSelector.tsx  BucketGrid.tsx  BulkBar.tsx  ColumnPane.tsx  ContextMenu.tsx  EncryptionModal.tsx  IndexBar.tsx  ListView.tsx  ObjectBrowser.tsx  PathBar.tsx  PreviewPane.tsx  SearchResultsPane.tsx  Toolbar.tsx  helpers.ts  modals.tsx
src/routes/browse/preview/: Lightbox.tsx  MetaList.tsx  PdfModal.tsx  SheetModal.tsx
src/routes/mainapp/: ActiveTransfersBar.tsx  MobileHeader.tsx  ProviderTile.tsx  Sidebar.tsx  UpdateModal.tsx
src/routes/onboarding/: AccountSetupStep.tsx  ProviderStep.tsx  UserInfoStep.tsx  shared.tsx
src/routes/settings/: AccountsList.tsx  AddAccountForm.tsx  SettingsForm.tsx
src/routes/transfers/: TransferRow.tsx  helpers.ts
src/state/: app.ts  confirm.tsx  profile.ts  theme.ts  toast.tsx
src/styles/: active-transfers.css  app-shell.css  bucket-grid.css  bug-report.css  buttons.css  context-menu.css  forms.css  icons.css  index.css  layout.css  logs.css  miller.css  misc.css  mobile-browse.css  mobile-forms.css  mobile-sidebar.css  modals.css  objects.css  onboarding.css  preview.css  providers.css  search.css  settings.css  sidebar.css  titlebar.css  toast.css  tokens.css  toolbar.css  transfers.css  utils.css  view-mode.css
src/types/: index.ts
src/utils/: CodeEditor.tsx  ErrorPopup.tsx  Select.tsx  androidBack.ts  breakpoint.ts  errors.ts  fmt.ts  icons.tsx  notify.ts  regionFromEndpoint.ts  tooltip.ts  updates.ts  usePagedBrowse.ts
