[package]
name = "cosmog"
version = "0.1.10"
description = "Desktop S3-compatible object storage manager"
authors = ["Sonu Sharma <sonu.s@eclateng.com>"]
homepage = "https://github.com/sonusharma/cosmog"
repository = "https://github.com/sonusharma/cosmog"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cosmog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"
aws-smithy-types = "1"
aws-smithy-runtime-api = "1"

tokio-rusqlite = "0.6"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
urlencoding = "2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-fs = "2"
age = { version = "0.11", features = ["armor"] }
rand = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"
aws-smithy-http-client = { version = "1", features = ["rustls-ring"] }
webpki-root-certs = "1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

